# HCMUS_09-HCMUS-Digital_race_2019

./: .gitignore  CMakeLists.txt  README  package.xml
cds_msgs/: CMakeLists.txt  package.xml
cds_msgs/msg/: Lane.msg  Object.msg  SignDetected.msg  SignDetectedArray.msg  System.msg
detection/lane_detector/: .gitignore  CMakeLists.txt  Makefile  package.xml
detection/lane_detector/include/: lane_detector.hpp
detection/lane_detector/launch/: lane_detector.launch
detection/lane_detector/scripts/: lane_detector.py
detection/lane_detector/src/: lane_detector.cpp  lane_detector_node.cpp  lane_detector_test.cpp
detection/object_detector/: CMakeLists.txt  package.xml
detection/object_detector/include/: yolo_object_detector.h
detection/object_detector/launch/: vision_yolo3_detect.launch
detection/object_detector/msg/: Object.msg
detection/object_detector/src/: object_detector_node.cpp
detection/road_segmentation/: CMakeLists.txt  README.md  package.xml
detection/road_segmentation/include/: road_segmentation.hpp
detection/road_segmentation/launch/: road_segmentation.launch
detection/road_segmentation/src/: road_segmentation.cpp  road_segmentation_node.cpp
detection/traffic_sign_detector/: CMakeLists.txt  README.md  package.xml
detection/traffic_sign_detector/include/: traffic_sign_detector.hpp  traffic_sign_recognizer.hpp
detection/traffic_sign_detector/launch/: traffic_sign_detector.launch
detection/traffic_sign_detector/scripts/: threshold.py
detection/traffic_sign_detector/src/: traffic_sign_detector.cpp  traffic_sign_detector_node.cpp  traffic_sign_detector_test.cpp  traffic_sign_recognizer.cpp
include/: carcontrol.h  detectlane.h  lanedetector.h  obstacledetector.h  signdetector.h  topics.h  utils.h
launch/: team405.launch
msg/: Sign.msg
planning/navigation/: CMakeLists.txt  package.xml
planning/navigation/include/: navigation.hpp
planning/navigation/src/: navigation.cpp  navigation_node.cpp
scripts/: .merge.py.swp  box.py  drivecar.py  gray_threshold.py  harris.py  harris_merge.py  hsv_threshold.py  hsv_threshold_sobel.py  lanedetect.py  line  line.cpp  line.py  main.py  merge.py  merge_bak.py  signdetect.py  sobel.py
src/: carcontrol.cpp  detectlane.cpp  lanedetector.cpp  main.cpp  obstacledetector.cpp  sign.cpp  signdetector.cpp  utils.cpp
system/: CMakeLists.txt  package.xml
system/launch/: system.launch  system_car.launch
system/src/: system_node.cpp
visualization/: CMakeLists.txt  package.xml
visualization/src/: visualization_node.cpp
